--- a/index.html
+++ b/index.html
@@ -155,13 +155,16 @@
                         <option value="cloud">Cloud Computing</option>
                     </select>
                     <button class="btn-secondary" id="applyFilters">Apply Filters</button>
+                    <button class="btn-secondary" id="clearFilters" style="display: none;">
+                        <i class="fas fa-times"></i> Clear Filters
+                    </button>
                     <button class="btn-primary" id="createOpportunityBtn" style="display: none;">
                         <i class="fas fa-plus"></i> Create New
                     </button>
                 </div>
             </div>
             <div class="opportunities-container">
-                <div class="opportunities-list" id="allOpportunities">
+                <div class="opportunities-grid" id="allOpportunities">
                     <!-- All opportunities will be loaded here -->
                 </div>
             </div>
