giving admin previleges to control all other users

--- a/index.html
+++ b/index.html
@@ -491,8 +491,12 @@
                     </div>
                 </div>
                 <div class="form-actions">
-                    <button type="button" class="btn-secondary close-modal">Cancel</button>
-                    <button type="submit" class="btn-primary">Create Opportunity</button>
+                    <button type="button" class="btn-secondary" onclick="closeModal('createOpportunityModal')">
+                        <i class="fas fa-times"></i> Cancel
+                    </button>
+                    <button type="submit" class="btn-primary">
+                        <i class="fas fa-plus"></i> Create Opportunity
+                    </button>
                 </div>
             </form>
         </div>
