Documenting the project

--- a/index.html
+++ b/index.html
@@ -170,6 +170,19 @@
             </div>
         </section>
 
+        <!-- Events Section -->
+        <section id="events" class="page-section">
+            <div class="page-header">
+                <h1>Upcoming Events</h1>
+                <p>Discover tech conferences, meetups, workshops, and networking events</p>
+            </div>
+            <div class="opportunities-container">
+                <div class="opportunities-grid" id="eventsList">
+                    <!-- Events will be loaded here -->
+                </div>
+            </div>
+        </section>
+
         <!-- Dashboard Section -->
         <section id="dashboard" class="page-section">
             <div class="page-header">
